--- a/crates/rsyinfra/Cargo.toml
+++ b/crates/rsyinfra/Cargo.toml
@@ -19,7 +19,7 @@ crate-type = ["rlib", "cdylib"]
 [features]
 
 [dependencies]
-
+rsylog = { workspace = true }
 
 [package.metadata.docs.rs]
 all-features.workspace = true
