--- a/crates/rsyerr/Cargo.toml
+++ b/crates/rsyerr/Cargo.toml
@@ -1,31 +1,27 @@
 [package]
-name = "rsycache"
+name = "rsyerr"
 authors.workspace = true
-description = "a local cache manager for rust"
+description = "rust error handling wrapper"
 edition.workspace = true
 homepage.workspace = true
 license.workspace = true
+readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
-readme = "README.md"
-categories = ["development-tools::debugging"]
-keywords = ["logging", "log"]
+categories = []
+keywords = ["infrastructure", "log", "mem", "network"]
 include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 
 [lib]
 crate-type = ["rlib", "cdylib"]
 
-[package.metadata.docs.rs]
-# all-features = true
-# rustdoc-args = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
-# targets.workspace = ["--generate-link-to-definition"]
-
 [features]
 
 
 [dependencies]
-lru = "^0.13"
+anyhow = "^1"
+thiserror = "^2"
 
 [lints]
 workspace = true
