--- a/crates/rsyemb/Cargo.toml
+++ b/crates/rsyemb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rsysync"
+name = "rsyemb"
 authors.workspace = true
 edition.workspace = true
 homepage.workspace = true
@@ -10,8 +10,6 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
-parking_lot = "^0.12"
-spin = "^0.10"
 
 [lints]
 workspace = true
