--- a/crates/rsypat/Cargo.toml
+++ b/crates/rsypat/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "rsyerr"
+name = "rsypat"
 authors.workspace = true
-description = "rust error handling wrapper"
 edition.workspace = true
 homepage.workspace = true
 license.workspace = true
@@ -9,18 +8,20 @@ readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
-categories = []
-keywords = ["infrastructure", "log", "mem", "network"]
-include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 
 [lib]
 crate-type = ["rlib", "cdylib"]
 
 [features]
 
-
 [dependencies]
 anyhow = "^1"
+bitflags = "^2"
+# [`Half-precision`](https://github.com/VoidStarKat/half-rs/tree/main) floating point f16 and bf16 types
+# for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types
+half = "^2"
+lazy_static = "^1"
+once_cell = "^1"
 thiserror = "^2"
 
 [lints]
