--- a/crates/rsyos/Cargo.toml
+++ b/crates/rsyos/Cargo.toml
@@ -3,7 +3,7 @@ name = "rsyos"
 authors.workspace = true
 description = "A operating system written in Rust"
 edition.workspace = true
-homepage.workspace = true
+# homepage.workspace = true
 license.workspace = true
 repository.workspace = true
 rust-version.workspace = true
