--- a/crates/rsyconcur/Cargo.toml
+++ b/crates/rsyconcur/Cargo.toml
@@ -9,7 +9,86 @@ repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
 
+[lib]
+crate-type = ["rlib"]
+
+[features]
+default = []
+
 [dependencies]
+[dependencies.crossbeam]
+version = "^0.8"
+default-features = false
+optional = true
+
+[dependencies.event-listener]
+version = "^5"
+default-features = false
+optional = true
+
+[dependencies.flume]
+version = "^0.11"
+default-features = false
+optional = true
+
+[dependencies.futures-intrusive]
+version = "^0.5"
+default-features = false
+optional = true
+
+[dependencies.lock_api]
+version = "^0.4"
+default-features = false
+optional = true
+
+[dependencies.loom]
+version = "^0.7"
+default-features = false
+optional = true
+
+[dependencies.parking_lot]
+version = "^0.12"
+default-features = false
+optional = true
+
+[dependencies.rayon]
+version = "^1"
+default-features = false
+optional = true
+
+[dependencies.sdd]
+version = "^3"
+default-features = false
+optional = true
+
+[dependencies.spin]
+version = "^0.10"
+default-features = false
+
+[dependencies.sync_wrapper]
+version = "^1"
+default-features = false
+optional = true
+
+[dependencies.thread-priority]
+version = "^1"
+default-features = false
+optional = true
+
+[dependencies.thread_local]
+version = "^1"
+default-features = false
+optional = true
+
+[dependencies.threadpool]
+version = "^1"
+default-features = false
+optional = true
+
+[dependencies.try-lock]
+version = "^0.2"
+default-features = false
+optional = true
 
 [lints]
 workspace = true
