--- a/crates/rsyffi/Cargo.toml
+++ b/crates/rsyffi/Cargo.toml
@@ -8,8 +8,17 @@ readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
+[lib]
+crate-type = ["rlib"]
+
+[features]
+default = []
 
 [dependencies]
+[dependencies.libloading]
+version = "^0.8"
+default-features = false
+optional = true
 
 [lints]
 workspace = true
